fix/remove horizontal scrollbar on mobile, tablet

--- a/assets/scss/components/categories.scss
+++ b/assets/scss/components/categories.scss
@@ -3,7 +3,15 @@
 .categories {
   display: flex; flex-direction: column; width: 100%; gap: 10px; margin-bottom: 10px;
   &-body {
-    display: flex; gap: 5px; overflow-x: auto;
+    display: flex; gap: 5px;
+    overflow-x: auto;
+    @media (max-width: $tablet) {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+    }
     &-item {
       text-decoration: none; background: $border-color; padding: 2px 10px; border-radius: 5px;
       color: $user-details-background-color; letter-spacing: 1px; white-space: nowrap;
